src/objects/echosign_dev1__SIGN_Form_Field_Import__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipName>EchoSign_Form_Field_Imports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Data_Mapping__c</fullName>
        <label>Salesforce to Adobe Sign Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>Form Field Imports</relationshipLabel>
        <relationshipName>EchoSign_Form_Field_Imports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Document_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Key</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Duplicate_Form_Fields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Duplicate Form Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Form_Fields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Text Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form Field Import</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Form Field Import Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Field Imports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>